[package]
name = "elements"
version = "0.10.0"
authors = ["The Elements Core team"]
description = "Library with support for de/serialization, parsing and executing on data structures and network messages related to Elements"
license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-elements/"
repository = "https://github.com/ElementsProject/rust-elements/"
documentation = "https://docs.rs/elements/"
keywords = [ "crypto", "bitcoin", "elements", "liquid", "sidechains" ]
readme = "README.md"

[lib]
name = "elements"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
bech32 = "0.7.1"
byteorder = "1.2"
bitcoin_hashes = "0.7"
bitcoinconsensus = { version = "0.17", optional = true }
serde = { version = "1", optional = true }
secp256k1 = "0.15"
hex = "=0.3.2"

[dev-dependencies]
serde_derive = "<1.0.99"
serde_json = "1"
serde_test = "1"
secp256k1 = { version = "0.15", features = ["rand"] }
