[package]
name = "elements"
version = "0.10.0"
authors = ["The Elements Core team"]
description = "Library with support for de/serialization, parsing and executing on data structures and network messages related to Elements"
license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-elements/"
repository = "https://github.com/ElementsProject/rust-elements/"
documentation = "https://docs.rs/elements/"
keywords = [ "crypto", "bitcoin", "elements", "liquid", "sidechains" ]
readme = "README.md"

[lib]
name = "elements"
path = "src/lib.rs"

[features]
fuzztarget = ["bitcoin/fuzztarget"]
unstable = []
rand = ["secp256k1/rand-std"]
use-serde = ["hex", "serde", "bitcoin/use-serde"]

[dependencies]
bitcoin = "0.23.0"
bitcoin_hashes = "0.7.3" # explicitly for newtype macros

bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }
hex = { version = "=0.3.2", optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "1"
serde_test = "1"
secp256k1 = { version = "0.17.1", features = ["rand-std"] }
